--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,13 +1,17 @@
 *{
-    outline: 1px solid red;
-    background-color: #1F2937;
+    /*outline: 1px solid red;*/
     font-family: Arial, Helvetica, sans-serif;
 }
 
 .header,.footer{
+    display: flex;
     background-color: #1F2937;
     color: #F9FAF8;
     max-width: 1200px;
+}
+
+.bg{
+    background-color: #1F2937;
 }
 
 a{
@@ -19,8 +23,10 @@ a{
 .headerContainer{
 display: flex;
 align-items: center;
-margin-left: 10px;
-margin-right: 10px;
+justify-content: center;
+margin-left: auto;
+margin-right: auto;
+background-color: #1F2937;
 }
 
 .logoItem{
@@ -41,6 +47,33 @@ margin-right: 10px;
 .hero{
     color: #F9FAF8;
     background-color: #1F2937;
+    display:flex;
+    align-items: center;
+}
+
+.leftHero{
+    display: flex;
+    flex-direction: column;
+    padding: 25px;
+    max-width: 45%;
+    margin-left: auto;
+    
+}
+
+.rightHero{
+    flex-basis: 50%;
+    padding: 25px;
+
+}
+
+.imgHero{
+    height: auto;
+    width: 300px;
+}
+
+.heroText{
+    font-size: 40px;
+    margin-bottom: 3px;
 }
 
 h1{
@@ -60,6 +93,37 @@ h1{
 
 .callToAction{
     background-color: #3882F6;
+    max-width: 100px;
+    color: white;
+    font-weight: bold;
+    padding: 5px;
+    border-radius: 5px;
+}
+
+.preview{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #F9FAF8;
+    color:#1F2937;
+    padding: 25px;
+    
+}
+
+.dailyPick{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    
+}
+
+.pick{
+    display: flex;
+    flex-direction: column;
+    flex: 1 1 auto;
+    outline: 1px solid red;
+    margin: 15px;
 }
 
 .footer{
