--- a/stylesheet.css
+++ b/stylesheet.css
@@ -59,16 +59,13 @@ background-color: #1F2937;
     padding: 25px;
     max-width: 500px;
     flex: 1 1 auto;
-    margin-left: auto;
-    outline: 1px solid rgb(0, 4, 255);
-    
+    margin-left: auto;    
 }
 
 .rightHero{
     display: flex;
     flex: 1 1 auto;
     padding: 25px;
-    outline: 1px solid red;
     max-width: fit-content;
     margin-right: auto;
 }
@@ -180,17 +177,33 @@ h1{
     border-radius: 5px;
     padding: 20px;
 }
+.lineOne{
+    margin: 0%;
+}
+.lineTwo{
+    color: #e5e7eb88;
+    margin: 0%;
+}
 
 .divLeft{
+    display: flex;
+    flex-direction: column;
+    flex: 1 1 auto;
+    justify-content: center;
+    padding: 5px;
 
 }
 
 .divRight{
-    
+    display: flex;
+    flex: 1 1 50%;
+    justify-content: center;
 }
 
 
 .footer{
-    text-align: center;
     padding: 25px;
+    justify-content: center;
+    margin-left: auto;
+    margin-right: auto;
 }
